# rifts-protocol-v2

./: Cargo.toml  lib.rs
Rifts/: .browserslistrc  .env.example  .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
Rifts/public/: rrifts-metadata.json  vanity-worker.js
Rifts/public/idl/: governance.json  rifts_protocol_v2.json
Rifts/public/website/: RIFTS10.js  RIFTS2.css  index.html  vercel.json
Rifts/src/: global.d.ts
Rifts/src/app/: globals.css  layout.tsx  page.tsx
Rifts/src/components/: BackgroundFX.tsx  BeatifulText.tsx  ChromeGrid.tsx  ChromeGridClient.tsx  Features.tsx  Footer.tsx  FuturisticLoader.tsx  Header.tsx  Hero.tsx  Iridescence.tsx  IridescentBackground.jsx  IridescentBackground.tsx  OptimizedChromeGrid.tsx  Protocol.tsx  Stats.tsx  Tokenomics.tsx
Rifts/src/config/: appkit.ts
Rifts/src/hooks/: index.ts  use-outside-click.tsx  useReferrals.ts  useUserProfile.ts  useWallet.ts  useWalletAdapter.ts
Rifts/src/jupiter/: accounts.ts  client.ts  index.ts  transactions.ts
Rifts/src/lib/: rifts-client.ts  server-price-cache.ts  server-signature-cache.ts  utils.ts  vanity-accelerator.ts  vanity-gpu-optimizer.ts  vanity-pda-generator.ts  vanity-worker.ts  vault-balances.ts
Rifts/src/services/: analyticsBlockchainService.ts  jupiter-api-client.ts  jupiter-service.ts  portfolioBlockchainService.ts  realProtocolAnalytics.ts
Rifts/src/types/: index.ts
Rifts/website/: buy-button-overlay.js  index.html  riftprotocol.css  riftprotocol.js  riftprotocol.js.backup2  site.webmanifest  slplayer.js
src/: lib.rs
(+205 files in other folders)
