[package]
name = "rifts-protocol-v2"
version = "2.0.0"
description = "Rifts Protocol V2 - SPL Token-2022 with Transfer Fees"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rifts_protocol_v2"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
spl-token-2022 = { version = "8.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.7"
spl-pod = "0.5"
switchboard-on-demand = { version = "0.11", default-features = false, features = ["anchor"] }

[lints.rust]
unexpected_cfgs = "allow"
